# stepflow-toolkit

./: Cargo.toml  开发计划.md  需求.md  项目结构.md
binaries/admin/: Cargo.toml
binaries/admin/src/: main.rs
binaries/cli/: Cargo.toml
binaries/cli/src/: main.rs
binaries/server/: Cargo.toml
binaries/server/src/: main.rs
docs/: README.md
docs/core/: 1. stepflow-core.md  2. stepflow-database.md  3. stepflow-registry.md  4. stepflow-executor.md  5. stepflow-sandbox.md  6. stepflow-api.md
docs/services/: 13. stepflow-embedding.md  14. stepflow-search.md  15. stepflow-monitoring.md
docs/tools/: 10. stepflow-shell.md  11. stepflow-ai.md  12. stepflow-system.md  7. stepflow-openapi.md  8. stepflow-asyncapi.md  8. stepflow-jsonrpc-openapi.md  9. stepflow-python.md
src/: lib.rs
