[package]
name = "stepflow-server"
version = "0.1.0"
edition = "2021"
description = "Stepflow Tool System - Server Binary"
license = "MIT"
repository = "https://github.com/stepflow/stepflow-toolkit"

[[bin]]
name = "stepflow-server"
path = "src/main.rs"

[dependencies]
stepflow-core = { path = "../../packages/stepflow-core" }
stepflow-database = { path = "../../packages/stepflow-database" }
stepflow-registry = { path = "../../packages/stepflow-registry" }
stepflow-executor = { path = "../../packages/stepflow-executor" }
stepflow-api = { path = "../../packages/stepflow-api" }
stepflow-monitoring = { path = "../../packages/stepflow-monitoring" }
stepflow-system = { path = "../../packages/stepflow-system" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true } 